# Robotics

./: Midterm Task - Mini Report.txt
Headers/: basic.h  irsensors.c  mathf.c  mathf.h  movement.h
Reports/: Robotics.docx
SimpleIDE/: Bubble Sort.c  Bubble Sort.side  Dragos_midterm.c  Eduard_final_task.c  Go_Straight_Line.c  Go_Straight_Line.side  Run_Straight_Line.side  Spin.c  Spin.side  Square.c  Square.side  Struct.side  Task4.rar  Task_1.c  Task_2_1.c  Task_2_1.side  Task_2_2.c  Task_2_2.side  Task_2_3.c  Task_2_3.side  Task_3_1.c  Task_3_1.side  Task_3_2.c  Task_3_2.side  Task_4_1.c  Task_4_1.rar  Task_4_1.side  Task_Final Maze.c  Task_Final Maze.side  Task_midterm.c  Task_midterm.side  TestH.c  TestH.side  TestH2.c  TestH2.side  TestIR.c  TestIR.side  Updated.txt  basicmoves.h  fsafa.side  (+4 more)
SimpleIDE/Headers/: Headers.rar  basic.c  basic.h  irsensors.h  mathf.h  movement.c  movement.h
SimpleIDE/cmm/: Bubble Sort.binary  Bubble Sort.elf  Run_Straight_Line.binary  Run_Straight_Line.elf  Spin.binary  Spin.elf  Struct.binary  Struct.elf  Task1.binary  Task1.elf  Task_2_1.binary  Task_2_1.elf  Task_2_2.binary  Task_2_2.elf  Task_2_3.binary  Task_2_3.elf  Task_3_1.binary  Task_3_1.elf  Task_3_2(partial).binary  Task_3_2(partial).elf  Task_4_1.binary  Task_4_1.elf  Task_Final Maze.binary  (+6 more)
Simulator_Release_160505/Client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Simulator_Release_160505/Client/Examples/: CMakeLists.txt  Makefile  build_cmake_files.sh  cmake_install.cmake
Simulator_Release_160505/Client/Examples/ActivityBot/: AB_Interpreter  ActivitiyBot_Display_Calibration  ActivityBot_Calibrate  ActivityBot_Calibrate.c  CMakeLists.txt  Detect_and_Turn_from_Obstacle  Follow_with_Ping  Forward_Stop_Face_Right  Forward_Stop_Face_Right.c  IR_Roaming  Makefile  Navigate_by_Light  Roaming_with_Whiskers  Speeds_for_Navigation  Test_Encoder_Connections  Test_Encoder_Connections.c  Test_IR_Detectors  Test_IR_Detectors.c  Test_Light_Sensors  Test_Light_Sensors_Graphical  Test_Ping  Test_Whiskers_with_LEDs  Test_Whiskers_with_Terminal  Test_Whiskers_with_Terminal.c  Test_for_Trim  Whiskers_Push_Bot  cmake_install.cmake
Simulator_Release_160505/Client/Examples/C_Intro/: CMakeLists.txt  Makefile  cmake_install.cmake
Simulator_Release_160505/Client/Examples/C_Intro/Basics/: Array_Variables  CMakeLists.txt  Count_to_Ten  Decide_on_Multiple_Conditions  Decision_Chain  Floating_Point_Calculations  Hello_Message  Hello_Message.c  Index_Array_Variables  Make_a_Decision  Makefile  Repeat_While  Repeat_at_Least_Once  Variables_and_Calculations  cmake_install.cmake
Simulator_Release_160505/Client/Examples/C_Intro/Functions/: CMakeLists.txt  Function_Call  Function_with_Parameter  Function_with_Parameters_and_Return_Value  Global_Exchange  Makefile  Multicore_Example  cmake_install.cmake
Simulator_Release_160505/Client/Examples/Devices/: CMakeLists.txt  Makefile  cmake_install.cmake
Simulator_Release_160505/Client/Examples/Devices/Memory/: CMakeLists.txt  EEPROM_Data  EEPROM_Progam_Modes  Makefile  SD_Datalogger  SD_Minimal  SD_for_Text_Files_and_Back_to_Variables  SD_with_Tests  SD_with_Tests.c  cmake_install.cmake
Simulator_Release_160505/Client/Examples/Multicore/: CMakeLists.txt  Cog_End_Example  Cog_Info_Exchange  Cog_Run_Example  Cog_Stack_Usage_Test  Makefile  Print_from_Other_Core  cmake_install.cmake
Simulator_Release_160505/Client/Examples/Protocols/: CMakeLists.txt
Simulator_Release_160505/Client/applications/: CMakeLists.txt  Makefile  cmake_install.cmake  spinLeftRight
Simulator_Release_160505/Client/include/: abdrive.h  cog.h  propeller.h  simplei2c.h  simpletext.h  simpletools.h  simulator.h  tinyio.h
Simulator_Release_160505/Client/include/sys/: sd.h
Simulator_Release_160505/Client/src/: CMakeLists.txt  Makefile  cmake_install.cmake
Simulator_Release_160505/Client/src/Client/: Console.cpp  Console.hpp  ServerConnection.cpp  ServerConnection.hpp  launcher.cpp  launcher.hpp  simulator.cpp
Simulator_Release_160505/Client/src/Practical_Socket/: PracticalSocket.cpp  PracticalSocket.hpp  README.md
Simulator_Release_160505/Client/src/Simple_Libraries/Motor/libservo/: servo.cpp
Simulator_Release_160505/Client/src/Simple_Libraries/PropellerGCC/: CogManager.cpp  CogManager.hpp  PropellerGCCStarter.cpp  PropellerGCCStarter.hpp  cog.cpp  propeller.cpp  propeller_builtins.h
Simulator_Release_160505/Client/src/Simple_Libraries/Protocol/libsimplei2c/: simplei2c.cpp
Simulator_Release_160505/Client/src/Simple_Libraries/Robotics/ActivityBot/libabdrive/: abdrive.c  abdrive.cpp  goto_test.c
Simulator_Release_160505/Client/src/Simple_Libraries/Sensor/libping/: ping.cpp
Simulator_Release_160505/Client/src/Simple_Libraries/TextDevices/libfdserial/: fdserial.c
Simulator_Release_160505/Client/src/Simple_Libraries/TextDevices/libsimpletext/: LibSimpleTextStarter.cpp  LibSimpleTextStarter.hpp  doscanf.c  serial_rxtx.c  simpleterm.c  simpleterm_close.cpp  stringToFloat.c
Simulator_Release_160505/Client/src/Simple_Libraries/Utility/libsimpletools/: LibSimpleToolsStarter.cpp  LibSimpleToolsStarter.hpp  Makefile  cogend.c  dac.c  eeprom.cpp  high.cpp  i2c_in.c  i2c_out.c  irSensor.cpp  low.cpp  pause.c  pause.cpp  pwm.c  sddriverconfig.cpp  setDacBits.c  setGetTimeOfDay.cpp  squareWave.c  timeTicks.c  wait.c
Simulator_Release_160505/Client/src/Simple_Libraries/Utility/libstacktest/: cogStackTest.cpp
Simulator_Release_160505/Client/tests/: CMakeLists.txt  CMakeLists.txt~  Eduard_final_task  Makefile  Task_maze  Task_maze.c  cmake_install.cmake  test.txt  testAPI  testAPI.c  testChangeEncoderTicks  testChangeEncoderTicks.c  testDriveSpeed  testDriveSpeed.c  testGetPose  testGetPose.c  testGetSetTimeOfDay  testGetSetTimeOfDay.c  testGetTicks  testGetTicks.c  testIRSensors  testIRSensors.c  testLogIRSensors  testLogIRSensors.c  testPause  testPause.c  testTurningAngles  testTurningAngles.c
Simulator_Release_160505/Client/tests/Headers/: irsensors.h~  ledlights.h  ledlights.h~  mathf.h  movement.h  movement.h~  pingsensor.h  pingsensor.h~
(+59 files in other folders)
